--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <!-- column1 -->
                     <div class="column">
                         <img
-                            src="./assets/img/Logo-white.jpg"
+                            src="./assets/icons/Lesson.-white.svg"
                             alt="Logo-white"
                             class="logo"
                         />
